# openapi-generator-utils/treepots/treepots-openapigen-java-inflector/src/main/openapi/openapi.yaml
@@ -208,8 +208,14 @@ components:
           $ref: '#/components/schemas/LongEnum'
         SProp:
           $ref: '#/components/schemas/StringEnum'
+        IProp2:
+          $ref: '#/components/schemas/Int2Enum'
+        LProp2:
+          $ref: '#/components/schemas/Long2Enum'
         SProp2:
           $ref: '#/components/schemas/String2Enum'
+        Custom:
+          $ref: '#/components/schemas/Enum2WithCustomName'
       type: object
     IntEnum:
       enum:
