# openapi-generator-utils/treepots/treepots-openapigen-java-rest-assured/src/main/java/fr/jmini/openapi/openapitools/restassured/model/ObjWithEnums.java
@@ -20,7 +20,10 @@ import com.google.gson.annotations.JsonAdapter;
 import com.google.gson.annotations.SerializedName;
 import com.google.gson.stream.JsonReader;
 import com.google.gson.stream.JsonWriter;
+import fr.jmini.openapi.openapitools.restassured.model.Enum2WithCustomName;
+import fr.jmini.openapi.openapitools.restassured.model.Int2Enum;
 import fr.jmini.openapi.openapitools.restassured.model.IntEnum;
+import fr.jmini.openapi.openapitools.restassured.model.Long2Enum;
 import fr.jmini.openapi.openapitools.restassured.model.LongEnum;
 import fr.jmini.openapi.openapitools.restassured.model.String2Enum;
 import fr.jmini.openapi.openapitools.restassured.model.StringEnum;
@@ -45,9 +48,21 @@ public class ObjWithEnums {
   @SerializedName(SERIALIZED_NAME_SPROP)
   private StringEnum sprop;
 
+  public static final String SERIALIZED_NAME_IPROP2 = "IProp2";
+  @SerializedName(SERIALIZED_NAME_IPROP2)
+  private Int2Enum iprop2 = Int2Enum.NUMBER_2;
+
+  public static final String SERIALIZED_NAME_LPROP2 = "LProp2";
+  @SerializedName(SERIALIZED_NAME_LPROP2)
+  private Long2Enum lprop2 = Long2Enum.NUMBER_30;
+
   public static final String SERIALIZED_NAME_SPROP2 = "SProp2";
   @SerializedName(SERIALIZED_NAME_SPROP2)
   private String2Enum sprop2 = String2Enum.B;
+
+  public static final String SERIALIZED_NAME_CUSTOM = "Custom";
+  @SerializedName(SERIALIZED_NAME_CUSTOM)
+  private Enum2WithCustomName custom = Enum2WithCustomName.BAR;
 
   public ObjWithEnums iprop(IntEnum iprop) {
     this.iprop = iprop;
@@ -103,6 +118,42 @@ public class ObjWithEnums {
     this.sprop = sprop;
   }
 
+  public ObjWithEnums iprop2(Int2Enum iprop2) {
+    this.iprop2 = iprop2;
+    return this;
+  }
+
+   /**
+   * Get iprop2
+   * @return iprop2
+  **/
+  @ApiModelProperty(value = "")
+  public Int2Enum getIprop2() {
+    return iprop2;
+  }
+
+  public void setIprop2(Int2Enum iprop2) {
+    this.iprop2 = iprop2;
+  }
+
+  public ObjWithEnums lprop2(Long2Enum lprop2) {
+    this.lprop2 = lprop2;
+    return this;
+  }
+
+   /**
+   * Get lprop2
+   * @return lprop2
+  **/
+  @ApiModelProperty(value = "")
+  public Long2Enum getLprop2() {
+    return lprop2;
+  }
+
+  public void setLprop2(Long2Enum lprop2) {
+    this.lprop2 = lprop2;
+  }
+
   public ObjWithEnums sprop2(String2Enum sprop2) {
     this.sprop2 = sprop2;
     return this;
@@ -121,6 +172,24 @@ public class ObjWithEnums {
     this.sprop2 = sprop2;
   }
 
+  public ObjWithEnums custom(Enum2WithCustomName custom) {
+    this.custom = custom;
+    return this;
+  }
+
+   /**
+   * Get custom
+   * @return custom
+  **/
+  @ApiModelProperty(value = "")
+  public Enum2WithCustomName getCustom() {
+    return custom;
+  }
+
+  public void setCustom(Enum2WithCustomName custom) {
+    this.custom = custom;
+  }
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -134,12 +203,15 @@ public class ObjWithEnums {
     return Objects.equals(this.iprop, objWithEnums.iprop) &&
         Objects.equals(this.lprop, objWithEnums.lprop) &&
         Objects.equals(this.sprop, objWithEnums.sprop) &&
-        Objects.equals(this.sprop2, objWithEnums.sprop2);
+        Objects.equals(this.iprop2, objWithEnums.iprop2) &&
+        Objects.equals(this.lprop2, objWithEnums.lprop2) &&
+        Objects.equals(this.sprop2, objWithEnums.sprop2) &&
+        Objects.equals(this.custom, objWithEnums.custom);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(iprop, lprop, sprop, sprop2);
+    return Objects.hash(iprop, lprop, sprop, iprop2, lprop2, sprop2, custom);
   }
 
 
@@ -150,7 +222,10 @@ public class ObjWithEnums {
     sb.append("    iprop: ").append(toIndentedString(iprop)).append("\n");
     sb.append("    lprop: ").append(toIndentedString(lprop)).append("\n");
     sb.append("    sprop: ").append(toIndentedString(sprop)).append("\n");
+    sb.append("    iprop2: ").append(toIndentedString(iprop2)).append("\n");
+    sb.append("    lprop2: ").append(toIndentedString(lprop2)).append("\n");
     sb.append("    sprop2: ").append(toIndentedString(sprop2)).append("\n");
+    sb.append("    custom: ").append(toIndentedString(custom)).append("\n");
     sb.append("}");
     return sb.toString();
   }
