# openapi-generator-utils/treepots/treepots-openapigen-jaxrs-cxf/src/gen/java/fr/jmini/openapi/openapitools/model/ObjWithEnums.java
@@ -1,6 +1,9 @@
 package fr.jmini.openapi.openapitools.model;
 
+import fr.jmini.openapi.openapitools.model.Enum2WithCustomName;
+import fr.jmini.openapi.openapitools.model.Int2Enum;
 import fr.jmini.openapi.openapitools.model.IntEnum;
+import fr.jmini.openapi.openapitools.model.Long2Enum;
 import fr.jmini.openapi.openapitools.model.LongEnum;
 import fr.jmini.openapi.openapitools.model.String2Enum;
 import fr.jmini.openapi.openapitools.model.StringEnum;
@@ -33,7 +36,19 @@ public class ObjWithEnums  {
 
   @ApiModelProperty(value = "")
   @Valid
+  private Int2Enum iprop2 = Int2Enum.NUMBER_2;
+
+  @ApiModelProperty(value = "")
+  @Valid
+  private Long2Enum lprop2 = Long2Enum.NUMBER_30;
+
+  @ApiModelProperty(value = "")
+  @Valid
   private String2Enum sprop2 = String2Enum.B;
+
+  @ApiModelProperty(value = "")
+  @Valid
+  private Enum2WithCustomName custom = Enum2WithCustomName.BAR;
  /**
    * Get iprop
    * @return iprop
@@ -89,6 +104,42 @@ public class ObjWithEnums  {
   }
 
  /**
+   * Get iprop2
+   * @return iprop2
+  **/
+  @JsonProperty("IProp2")
+  public Int2Enum getIprop2() {
+    return iprop2;
+  }
+
+  public void setIprop2(Int2Enum iprop2) {
+    this.iprop2 = iprop2;
+  }
+
+  public ObjWithEnums iprop2(Int2Enum iprop2) {
+    this.iprop2 = iprop2;
+    return this;
+  }
+
+ /**
+   * Get lprop2
+   * @return lprop2
+  **/
+  @JsonProperty("LProp2")
+  public Long2Enum getLprop2() {
+    return lprop2;
+  }
+
+  public void setLprop2(Long2Enum lprop2) {
+    this.lprop2 = lprop2;
+  }
+
+  public ObjWithEnums lprop2(Long2Enum lprop2) {
+    this.lprop2 = lprop2;
+    return this;
+  }
+
+ /**
    * Get sprop2
    * @return sprop2
   **/
@@ -106,6 +157,24 @@ public class ObjWithEnums  {
     return this;
   }
 
+ /**
+   * Get custom
+   * @return custom
+  **/
+  @JsonProperty("Custom")
+  public Enum2WithCustomName getCustom() {
+    return custom;
+  }
+
+  public void setCustom(Enum2WithCustomName custom) {
+    this.custom = custom;
+  }
+
+  public ObjWithEnums custom(Enum2WithCustomName custom) {
+    this.custom = custom;
+    return this;
+  }
+
 
   @Override
   public String toString() {
@@ -115,7 +184,10 @@ public class ObjWithEnums  {
     sb.append("    iprop: ").append(toIndentedString(iprop)).append("\n");
     sb.append("    lprop: ").append(toIndentedString(lprop)).append("\n");
     sb.append("    sprop: ").append(toIndentedString(sprop)).append("\n");
+    sb.append("    iprop2: ").append(toIndentedString(iprop2)).append("\n");
+    sb.append("    lprop2: ").append(toIndentedString(lprop2)).append("\n");
     sb.append("    sprop2: ").append(toIndentedString(sprop2)).append("\n");
+    sb.append("    custom: ").append(toIndentedString(custom)).append("\n");
     sb.append("}");
     return sb.toString();
   }
