# openapi-generator-utils/treepots/treepots-openapigen-jaxrs-resteasy/src/gen/java/fr/jmini/openapi/openapitools/model/ObjWithEnums.java
@@ -4,7 +4,10 @@ import java.util.Objects;
 import java.util.ArrayList;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
+import fr.jmini.openapi.openapitools.model.Enum2WithCustomName;
+import fr.jmini.openapi.openapitools.model.Int2Enum;
 import fr.jmini.openapi.openapitools.model.IntEnum;
+import fr.jmini.openapi.openapitools.model.Long2Enum;
 import fr.jmini.openapi.openapitools.model.LongEnum;
 import fr.jmini.openapi.openapitools.model.String2Enum;
 import fr.jmini.openapi.openapitools.model.StringEnum;
@@ -20,7 +23,10 @@ public class ObjWithEnums   {
   private IntEnum iprop;
   private LongEnum lprop;
   private StringEnum sprop;
+  private Int2Enum iprop2 = Int2Enum.NUMBER_2;
+  private Long2Enum lprop2 = Long2Enum.NUMBER_30;
   private String2Enum sprop2 = String2Enum.B;
+  private Enum2WithCustomName custom = Enum2WithCustomName.BAR;
 
   /**
    **/
@@ -62,12 +68,48 @@ public class ObjWithEnums   {
    **/
   
   @ApiModelProperty(value = "")
+  @JsonProperty("IProp2")
+  public Int2Enum getIprop2() {
+    return iprop2;
+  }
+  public void setIprop2(Int2Enum iprop2) {
+    this.iprop2 = iprop2;
+  }
+
+  /**
+   **/
+  
+  @ApiModelProperty(value = "")
+  @JsonProperty("LProp2")
+  public Long2Enum getLprop2() {
+    return lprop2;
+  }
+  public void setLprop2(Long2Enum lprop2) {
+    this.lprop2 = lprop2;
+  }
+
+  /**
+   **/
+  
+  @ApiModelProperty(value = "")
   @JsonProperty("SProp2")
   public String2Enum getSprop2() {
     return sprop2;
   }
   public void setSprop2(String2Enum sprop2) {
     this.sprop2 = sprop2;
+  }
+
+  /**
+   **/
+  
+  @ApiModelProperty(value = "")
+  @JsonProperty("Custom")
+  public Enum2WithCustomName getCustom() {
+    return custom;
+  }
+  public void setCustom(Enum2WithCustomName custom) {
+    this.custom = custom;
   }
 
 
@@ -83,12 +125,15 @@ public class ObjWithEnums   {
     return Objects.equals(iprop, objWithEnums.iprop) &&
         Objects.equals(lprop, objWithEnums.lprop) &&
         Objects.equals(sprop, objWithEnums.sprop) &&
-        Objects.equals(sprop2, objWithEnums.sprop2);
+        Objects.equals(iprop2, objWithEnums.iprop2) &&
+        Objects.equals(lprop2, objWithEnums.lprop2) &&
+        Objects.equals(sprop2, objWithEnums.sprop2) &&
+        Objects.equals(custom, objWithEnums.custom);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(iprop, lprop, sprop, sprop2);
+    return Objects.hash(iprop, lprop, sprop, iprop2, lprop2, sprop2, custom);
   }
 
   @Override
@@ -99,7 +144,10 @@ public class ObjWithEnums   {
     sb.append("    iprop: ").append(toIndentedString(iprop)).append("\n");
     sb.append("    lprop: ").append(toIndentedString(lprop)).append("\n");
     sb.append("    sprop: ").append(toIndentedString(sprop)).append("\n");
+    sb.append("    iprop2: ").append(toIndentedString(iprop2)).append("\n");
+    sb.append("    lprop2: ").append(toIndentedString(lprop2)).append("\n");
     sb.append("    sprop2: ").append(toIndentedString(sprop2)).append("\n");
+    sb.append("    custom: ").append(toIndentedString(custom)).append("\n");
     sb.append("}");
     return sb.toString();
   }
