# openapi-generator-utils/treepots/treepots-openapigen-jaxrs-spec/src/gen/java/fr/jmini/openapi/openapitools/model/ObjWithEnums.java
@@ -1,6 +1,9 @@
 package fr.jmini.openapi.openapitools.model;
 
+import fr.jmini.openapi.openapitools.model.Enum2WithCustomName;
+import fr.jmini.openapi.openapitools.model.Int2Enum;
 import fr.jmini.openapi.openapitools.model.IntEnum;
+import fr.jmini.openapi.openapitools.model.Long2Enum;
 import fr.jmini.openapi.openapitools.model.LongEnum;
 import fr.jmini.openapi.openapitools.model.String2Enum;
 import fr.jmini.openapi.openapitools.model.StringEnum;
@@ -22,7 +25,10 @@ public class ObjWithEnums   {
   private @Valid IntEnum iprop;
   private @Valid LongEnum lprop;
   private @Valid StringEnum sprop;
+  private @Valid Int2Enum iprop2 = Int2Enum.NUMBER_2;
+  private @Valid Long2Enum lprop2 = Long2Enum.NUMBER_30;
   private @Valid String2Enum sprop2 = String2Enum.B;
+  private @Valid Enum2WithCustomName custom = Enum2WithCustomName.BAR;
 
   /**
    **/
@@ -77,6 +83,40 @@ public class ObjWithEnums   {
 
   /**
    **/
+  public ObjWithEnums iprop2(Int2Enum iprop2) {
+    this.iprop2 = iprop2;
+    return this;
+  }
+
+  
+  @ApiModelProperty(value = "")
+  @JsonProperty("IProp2")
+  public Int2Enum getIprop2() {
+    return iprop2;
+  }
+  public void setIprop2(Int2Enum iprop2) {
+    this.iprop2 = iprop2;
+  }
+
+  /**
+   **/
+  public ObjWithEnums lprop2(Long2Enum lprop2) {
+    this.lprop2 = lprop2;
+    return this;
+  }
+
+  
+  @ApiModelProperty(value = "")
+  @JsonProperty("LProp2")
+  public Long2Enum getLprop2() {
+    return lprop2;
+  }
+  public void setLprop2(Long2Enum lprop2) {
+    this.lprop2 = lprop2;
+  }
+
+  /**
+   **/
   public ObjWithEnums sprop2(String2Enum sprop2) {
     this.sprop2 = sprop2;
     return this;
@@ -92,6 +132,23 @@ public class ObjWithEnums   {
     this.sprop2 = sprop2;
   }
 
+  /**
+   **/
+  public ObjWithEnums custom(Enum2WithCustomName custom) {
+    this.custom = custom;
+    return this;
+  }
+
+  
+  @ApiModelProperty(value = "")
+  @JsonProperty("Custom")
+  public Enum2WithCustomName getCustom() {
+    return custom;
+  }
+  public void setCustom(Enum2WithCustomName custom) {
+    this.custom = custom;
+  }
+
 
   @Override
   public boolean equals(java.lang.Object o) {
@@ -105,12 +162,15 @@ public class ObjWithEnums   {
     return Objects.equals(iprop, objWithEnums.iprop) &&
         Objects.equals(lprop, objWithEnums.lprop) &&
         Objects.equals(sprop, objWithEnums.sprop) &&
-        Objects.equals(sprop2, objWithEnums.sprop2);
+        Objects.equals(iprop2, objWithEnums.iprop2) &&
+        Objects.equals(lprop2, objWithEnums.lprop2) &&
+        Objects.equals(sprop2, objWithEnums.sprop2) &&
+        Objects.equals(custom, objWithEnums.custom);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(iprop, lprop, sprop, sprop2);
+    return Objects.hash(iprop, lprop, sprop, iprop2, lprop2, sprop2, custom);
   }
 
   @Override
@@ -121,7 +181,10 @@ public class ObjWithEnums   {
     sb.append("    iprop: ").append(toIndentedString(iprop)).append("\n");
     sb.append("    lprop: ").append(toIndentedString(lprop)).append("\n");
     sb.append("    sprop: ").append(toIndentedString(sprop)).append("\n");
+    sb.append("    iprop2: ").append(toIndentedString(iprop2)).append("\n");
+    sb.append("    lprop2: ").append(toIndentedString(lprop2)).append("\n");
     sb.append("    sprop2: ").append(toIndentedString(sprop2)).append("\n");
+    sb.append("    custom: ").append(toIndentedString(custom)).append("\n");
     sb.append("}");
     return sb.toString();
   }
